--- a/index.html
+++ b/index.html
@@ -27,22 +27,22 @@
         <img src="Afzal.jpeg" alt="Afzal">
         <h1>Афзал</h1>
         <h2>
-        Всем привет! Меня зовут Улугбек, я учусь разработке ботов в телеграмм.
-        Я планирую бота, в котором люди могут ознакомится с нашей командой.            
+        Привет! Меня зовут Афзал, я начинающий дизайнер с опытом работы 3 года. 
+        В этом видео презентую работу выполненную с ребятами, на фигме.         
         </h2>
      </nav>
      <nav class = "navbar">
         <img src="Ulugbek.jpeg" alt="Ulugbek">
         <h1>Улугбек</h1>
         <h2>
-        Привет! Меня зовут Афзал, я начинающий дизайнер с опытом работы 3 года. 
-        В этом видео презентую работу выполненную с ребятами, на фигме.</h2>
+        Всем привет! Меня зовут Улугбек, я учусь разработке ботов в телеграмм.
+        Я планирую бота, в котором люди могут ознакомится с нашей командой.   
      </nav>
      <nav class = "navbar">
         <img src="Andrey.jpeg" alt="Andrey">
         <h1>Андрей</h1>
         <h2>
-        Я - Андрей Варнавский. В рамках нашего проекта я был ответственнен за разработку и хостинг сайта-визитки нашей команды.</h2>
+        Я - Андрей Варнавский. В рамках нашего проекта я был ответственен за разработку и хостинг сайта-визитки нашей команды.</h2>
      </nav>
     </body>
 </html>
